Read More, Earn Object Componnet

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,5 @@
+<div class="home__earn-object">
+    <earn-object [hasEarn]="true" [isStacked]="true" [earnFontSize]="'12'"></earn-object>
+</div>
 
-<earn-object [hasEarn]='true'></earn-object>
+<read-more [text]="textParagraph" [maxLength]="100"></read-more>
