--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="home__earn-object">
     <earn-object [hasEarn]="true" [isStacked]="true" [earnFontSize]="'12'"></earn-object>
+    <star-rating [rating]="'three'"></star-rating>
 </div>
 
 <read-more [text]="textParagraph" [maxLength]="100"></read-more>
