--- a/src/app/shared/dev-nav/dev-nav.component.html
+++ b/src/app/shared/dev-nav/dev-nav.component.html
@@ -1,11 +1,11 @@
 <nav class="dev-nav">
   <h5 class="mt-1 dev-nav__title">Front End Development</h5>
   <ul class="nav">
-    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link"[routerLink]="['/']">Home</a></li>
-    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link"[routerLink]="['/page-one']">Page One</a></li>
-    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link"[routerLink]="'/page-two'">Page Two</a></li>
-    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link"[routerLink]="'/page-three'">Page Three</a></li>
-    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link"[routerLink]="'/page-four'">Page Four</a></li>
-    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link"[routerLink]="'/page-five'">Page Five</a></li>
+    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="['/home']" [routerLinkActive]="['active']">Home</a></li>
+    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="['/page-one']" [routerLinkActive]="['active']">Page One</a></li>
+    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-two'" [routerLinkActive]="['active']">Page Two</a></li>
+    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-three'" [routerLinkActive]="['active']">Page Three</a></li>
+    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-four'" [routerLinkActive]="['active']">Page Four</a></li>
+    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-five'" [routerLinkActive]="['active']">Page Five</a></li>
   </ul>
 </nav>
