--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,3 +2,9 @@
 @import '/variables/_variables.scss';
 
 @import 'defaults/fonts.scss';
+
+router-outlet ~ * {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+  }
