--- a/src/app/pages/page-two/page-two.component.html
+++ b/src/app/pages/page-two/page-two.component.html
@@ -1,1 +1,17 @@
-<star-rating [rating]="'fourhalf'"></star-rating>
+<div class="container-fluid grid-masonry">
+    <div class="grid-masonry__card" *ngFor="let imagegallery of "></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+    <div class="grid-masonry__card"></div>
+</div>
