--- a/src/app/shared/dev-nav/dev-nav.component.html
+++ b/src/app/shared/dev-nav/dev-nav.component.html
@@ -2,7 +2,7 @@
   <h5 class="mt-1 dev-nav__title">Front End Development</h5>
   <ul class="nav">
     <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="['/home']" [routerLinkActive]="['active']">Home</a></li>
-    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="['/page-one']" [routerLinkActive]="['active']">Page One</a></li>
+    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="['/page-one']" [routerLinkActive]="['active']">CSS Grid</a></li>
     <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-two'" [routerLinkActive]="['active']">Page Two</a></li>
     <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-three'" [routerLinkActive]="['active']">Page Three</a></li>
     <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-four'" [routerLinkActive]="['active']">Page Four</a></li>
