--- a/src/app/pages/page-two/page-two.component.html
+++ b/src/app/pages/page-two/page-two.component.html
@@ -1,17 +1,22 @@
-<div class="container-fluid grid-masonry">
-    <div class="grid-masonry__card" *ngFor="let imagegallery of "></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-    <div class="grid-masonry__card"></div>
-</div>
+<main class="container-fluid masonry-gallery" (window:resize)="onResize(event)">
+  <h2>{{title}}</h2>
+  <div class="masonry-grid">
+    <div class="masonry-grid__item" *ngFor="let imageGallery of galleryImages ">
+      <div [attr.id]="'imageGallery' + imageGallery.id" class="masonry-card" (load)="resizeElementById('element')" >
+        <img [src]="imageGallery.imageUrl" alt="">
+        <div class="masonry-card__info">
+          <h5>{{ 'ID:&nbsp;' + imageGallery.id }} {{ 'Name:&nbsp;' + imageGallery.name }} </h5>
+          <p>
+            {{ 'Loc:&nbsp;' + imageGallery.location }}
+          </p>
+          <p>
+            {{ 'Desc:&nbsp;' + imageGallery.desc }}
+          </p>
+          <!-- <p>
+            {{ 'Tags:&nbsp;' + imageGallery.tags }}
+          </p> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
