--- a/src/app/pages/page-two/page-two.component.scss
+++ b/src/app/pages/page-two/page-two.component.scss
@@ -1,14 +1,26 @@
 @import '~scss/variables/_variables.scss';
+.masonry-gallery{
+  background-color: $gray-700;
+}
 
-
-.grid-masonry{
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-auto-rows: 20px;
-    background-color: $gray-700;
-    &__card{
-        background: $theme-primary-clr;
-    }
+.masonry-grid{
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: 20px;
+}
+.masonry-card{
+  position: relative;
+  background: $theme-primary-clr;
+  
+  img{
+    max-width: 100%;
+  }
+  &__info{
+    font-size: .75em;
+    width: 100%;
+    background-color:$white;
+    padding:5px; 
+  }
 
 }
