--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,9 @@
-<div class="home__earn-object">
+<!-- <div class="home__earn-object">
     <earn-object [hasEarn]="true" [isStacked]="true" [earnFontSize]="'12'"></earn-object>
-    <star-rating [rating]="'three'"></star-rating>
-</div>
+</div> -->
+<h1>{{ name }}</h1>
 
+<h4>Star Rating Component</h4>
+<star-rating [rating]="4"></star-rating>
+<h4>Read More Component</h4>
 <read-more [text]="textParagraph" [maxLength]="100"></read-more>
