--- a/src/app/shared/dev-nav/dev-nav.component.html
+++ b/src/app/shared/dev-nav/dev-nav.component.html
@@ -3,7 +3,7 @@
   <ul class="nav">
     <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="['/home']" [routerLinkActive]="['active']">Home</a></li>
     <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="['/page-one']" [routerLinkActive]="['active']">CSS Grid</a></li>
-    <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-two'" [routerLinkActive]="['active']">Masonry Gallery</a></li>
+    <!-- <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-two'" [routerLinkActive]="['active']">Masonry Gallery</a></li> -->
     <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-three'" [routerLinkActive]="['active']">Page Three</a></li>
     <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-four'" [routerLinkActive]="['active']">Page Four</a></li>
     <li class="nav-item dev-nav__item"><a class="nav-link dev-nav__link" [routerLink]="'/page-five'" [routerLinkActive]="['active']">Page Five</a></li>
