--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import '/variables/_variables.scss';
+@import './variables/variables';
 
 @import 'defaults/fonts.scss';
 
