custom accordion component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,4 +6,56 @@
 <h4>Star Rating Component</h4>
 <star-rating [rating]="4"></star-rating>
 <h4>Read More Component</h4>
-<read-more [text]="textParagraph" [maxLength]="100"></read-more>
+<read-more [text]="textParagraph" [maxLength]="300"></read-more>
+
+
+<app-accordion [title]="'Accordion one'" [isOpen]="true">
+	<p>Accordion one</p>
+	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit risus arcu. Donec dictum volutpat sem
+		ac commodo. Etiam semper felis ut venenatis facilisis. Sed a bibendum est, vitae viverra mi. Mauris nulla nibh,
+		rhoncus a dolor eget, tempus feugiat ligula. Maecenas augue risus, vulputate non massa eu, condimentum bibendum
+		enim. Vivamus at mollis nulla. Aenean dolor est, rutrum non consequat id, pellentesque sit amet dolor. Vestibulum
+		ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean blandit erat ac venenatis
+		fringilla. Praesent in finibus mi. Nunc commodo quis metus sed lobortis. Curabitur sollicitudin tellus vel porttitor
+		consectetur. Maecenas auctor ipsum et semper cursus.</p>
+</app-accordion>
+<app-accordion [title]="'Accordion two'" [isOpen]="false">
+	<p>Accordion two</p>
+	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit risus arcu. Donec dictum volutpat sem
+		ac commodo. Etiam semper felis ut venenatis facilisis. Sed a bibendum est, vitae viverra mi. Mauris nulla nibh,
+		rhoncus a dolor eget, tempus feugiat ligula. Maecenas augue risus, vulputate non massa eu, condimentum bibendum
+		enim. Vivamus at mollis nulla. Aenean dolor est, rutrum non consequat id, pellentesque sit amet dolor. Vestibulum
+		ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean blandit erat ac venenatis
+		fringilla. Praesent in finibus mi. Nunc commodo quis metus sed lobortis. Curabitur sollicitudin tellus vel porttitor
+		consectetur. Maecenas auctor ipsum et semper cursus.</p>
+</app-accordion>
+<app-accordion [title]="'Accordion three'" [isOpen]="false">
+	<p>Accordion three</p>
+	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit risus arcu. Donec dictum volutpat sem
+		ac commodo. Etiam semper felis ut venenatis facilisis. Sed a bibendum est, vitae viverra mi. Mauris nulla nibh,
+		rhoncus a dolor eget, tempus feugiat ligula. Maecenas augue risus, vulputate non massa eu, condimentum bibendum
+		enim. Vivamus at mollis nulla. Aenean dolor est, rutrum non consequat id, pellentesque sit amet dolor. Vestibulum
+		ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean blandit erat ac venenatis
+		fringilla. Praesent in finibus mi. Nunc commodo quis metus sed lobortis. Curabitur sollicitudin tellus vel porttitor
+		consectetur. Maecenas auctor ipsum et semper cursus.</p>
+</app-accordion>
+<app-accordion [title]="'Accordion four'" [isOpen]="false">
+	<p>Accordion four</p>
+	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit risus arcu. Donec dictum volutpat sem
+		ac commodo. Etiam semper felis ut venenatis facilisis. Sed a bibendum est, vitae viverra mi. Mauris nulla nibh,
+		rhoncus a dolor eget, tempus feugiat ligula. Maecenas augue risus, vulputate non massa eu, condimentum bibendum
+		enim. Vivamus at mollis nulla. Aenean dolor est, rutrum non consequat id, pellentesque sit amet dolor. Vestibulum
+		ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean blandit erat ac venenatis
+		fringilla. Praesent in finibus mi. Nunc commodo quis metus sed lobortis. Curabitur sollicitudin tellus vel porttitor
+		consectetur. Maecenas auctor ipsum et semper cursus.</p>
+</app-accordion>
+<app-accordion [title]="'Accordion five'" [isOpen]="false">
+	<p>Accordion five</p>
+	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas hendrerit risus arcu. Donec dictum volutpat sem
+		ac commodo. Etiam semper felis ut venenatis facilisis. Sed a bibendum est, vitae viverra mi. Mauris nulla nibh,
+		rhoncus a dolor eget, tempus feugiat ligula. Maecenas augue risus, vulputate non massa eu, condimentum bibendum
+		enim. Vivamus at mollis nulla. Aenean dolor est, rutrum non consequat id, pellentesque sit amet dolor. Vestibulum
+		ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean blandit erat ac venenatis
+		fringilla. Praesent in finibus mi. Nunc commodo quis metus sed lobortis. Curabitur sollicitudin tellus vel porttitor
+		consectetur. Maecenas auctor ipsum et semper cursus.</p>
+</app-accordion>
